# bevy_wasm_modding

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
bevy_wasm/: Cargo.toml
bevy_wasm/src/: lib.rs  mod_state.rs  plugin.rs  wasm_asset.rs
bevy_wasm/src/runtime/native/: linker.rs  mod.rs
bevy_wasm/src/systems/: load_instances.rs
bevy_wasm_modding/: Cargo.toml
bevy_wasm_modding/src/: lib.rs  mod_state.rs  plugin.rs  wasm_asset.rs
bevy_wasm_modding/src/runtime/native/: linker.rs  mod.rs
bevy_wasm_modding/src/runtime/web/: linker.rs  mod.rs
bevy_wasm_modding/src/systems/: tick_mods.rs  update_shared_resource.rs
bevy_wasm_modding_shared/: Cargo.toml
bevy_wasm_modding_shared/src/: lib.rs
bevy_wasm_modding_sys/: Cargo.toml
bevy_wasm_modding_sys/src/: ffi_plugin.rs  lib.rs  time.rs
bevy_wasm_modding_sys/src/ecs/: extern_res.rs
bevy_wasm_shared/: Cargo.toml
bevy_wasm_shared/src/: lib.rs  resource_id.rs
bevy_wasm_sys/: Cargo.toml
bevy_wasm_sys/src/: ffi.rs  ffi_plugin.rs
bevy_wasm_sys/src/ecs/: extern_res.rs
examples/cubes/: README.md
examples/cubes/cubes/: Cargo.toml
examples/cubes/cubes/src/: main.rs
examples/cubes/cubes_protocol/: Cargo.toml
examples/cubes/cubes_protocol/src/: lib.rs
examples/cubes/mod_with_bevy/: Cargo.toml
examples/cubes/mod_with_bevy/src/: lib.rs
examples/cubes/mod_without_bevy/: Cargo.toml
examples/cubes/mod_without_bevy/src/: lib.rs
examples/shared_resources/shared_resources/: Cargo.toml  build.rs
examples/shared_resources/shared_resources/src/: main.rs
examples/shared_resources/shared_resources_mod/: Cargo.toml
examples/shared_resources/shared_resources_mod/src/: lib.rs
examples/shared_resources/shared_resources_protocol/: Cargo.toml
examples/shared_resources/shared_resources_protocol/src/: lib.rs
examples/simple/simple/: Cargo.toml  build.rs
examples/simple/simple/src/: main.rs
examples/simple/simple_mod/: Cargo.toml
examples/simple/simple_mod/src/: lib.rs
examples/simple/simple_protocol/: Cargo.toml
examples/simple/simple_protocol/src/: lib.rs
