[package]
categories = ["wasm", "game-development"]
description = "Run WASM systems for modding in Bevy"
edition = "2024"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm_modding"
readme = "../README.md"
repository = "https://github.com/I-Ruiz/bevy_wasm_modding"
version = "0.19.2"

[dependencies]
anyhow = "1.0"
bevy_wasm_modding_shared = {path = "../bevy_wasm_modding_shared", version = "0.19.1"}
bevy_ecs = "0.19.0"
bevy_tasks = "0.19.0"
bincode = "1.3"
colored = "2.0"
serde = "1.0"
tracing = "0.1.44"
thiserror = "2.0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"

[dependencies.bevy]
default-features = false
features = ["bevy_asset"]
version = "0.19.0"
