[package]
categories = ["wasm", "game-development"]
description = "Run WASM systems in Bevy"
edition = "2024"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm_modding_shared"
readme = "../README.md"
repository = "https://github.com/I-Ruiz/bevy_wasm_modding"
version = "0.19.0"

[dependencies]
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
