[package]
categories = ["wasm", "game-development"]
description = "Import into your wasm scripts. Use with the bevy_wasm crate."
edition = "2024"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm_modding_sys"
readme = "../README.md"
repository = "https://github.com/I-Ruiz/bevy_wasm_modding"
version = "0.19.0"

[features]
bevy = ["bevy_app", "bevy_derive", "bevy_ecs", "bevy_math", "bevy_reflect", "bevy_transform"]
default = ["bevy"]

[dependencies]
bevy_app = {version = "0.19.0", optional = true}
bevy_derive = {version = "0.19.0", optional = true}
bevy_ecs = {version = "0.19.0", optional = true}
bevy_math = {version = "0.19.0", optional = true}
bevy_reflect = {version = "0.19.0", optional = true}
bevy_transform = {version = "0.19.0", optional = true, features = ["serialize"]}
bevy_wasm_modding_shared = {path = "../bevy_wasm_modding_shared", version = "0.19.0"}
bincode = "1.3"
serde = "1.0"
