[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "mod_with_bevy"
publish = false
version = "0.18.0"

[lib]
# Generate a `.wasm` file instead of a dll
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = "0.18.0"
cubes_protocol = {path = "../cubes_protocol"}

uuid = { version = "=1.19.0", features = ["v4", "js"] }
#getrandom = { version = "0.2", features = ["js"] }
[dependencies.bevy_wasm_sys]
default-features = true # <- because we will be using Bevy's ECS
path = "../../../bevy_wasm_sys"
