[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "mod_with_bevy"
publish = false
version = "0.19.0"

[lib]
# Generate a `.wasm` file instead of a dll
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = "0.19.0"
cubes_protocol = {path = "../cubes_protocol"}

uuid = { version = "=1.23.4", features = ["v4", "js"] }

[dependencies.bevy_wasm_modding_sys]
default-features = true # <- because we will be using Bevy's ECS
path = "../../../bevy_wasm_modding_sys"
