[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "shared_resources_protocol"
publish = false
version = "0.18.0"

[dependencies]
bevy_derive = "0.18.0"
bevy_ecs = "0.18.0"
bevy_reflect = "0.18.0"
bevy_wasm_shared = {path = "../../../bevy_wasm_shared"}
serde = {version = "1.0", features = ["derive"]}
