[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "shared_resources_protocol"
publish = false
version = "0.19.0"

[dependencies]
bevy_derive = "0.19.0"
bevy_ecs = "0.19.0"
bevy_reflect = "0.19.0"
bevy_wasm_modding_shared = {path = "../../../bevy_wasm_modding_shared"}
serde = {version = "1.0", features = ["derive"]}
