[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "simple_mod"
publish = false
version = "0.18.0"

[lib]
# Generate a `.wasm` file instead of a dll
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = "0.18.0"
bevy_wasm_sys = {path = "../../../bevy_wasm_sys"}
serde = {version = "1.0", features = ["derive"]}
simple_protocol = {path = "../simple_protocol"}
